force-app/main/default/objects/FS_CIF__c/fields/FS_Platform2_Dispenser__c.field-meta.xml
<CustomField>
    <fullName>FS_Platform2_Dispenser__c</fullName>
    <formula>TEXT( FS_Platform2__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Platform2 Dispenser</label>
    <type>Text</type>
</CustomField>