force-app/main/default/objects/FS_CIF__c/fields/FS_Platform3__c.field-meta.xml
<CustomField>
    <fullName>FS_Platform3__c</fullName>
    <label>Platform 3 for Install</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Platform_Types</valueSetName>
    </valueSet>
</CustomField>