force-app/main/default/objects/FS_CIF__c/fields/FS_Portion_Control_Setting__c.field-meta.xml
<CustomField>
    <fullName>FS_Portion_Control_Setting__c</fullName>
    <label>Portion Control Setting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>