force-app/main/default/objects/FS_CIF__c/fields/FS_Product_Billing_Setup__c.field-meta.xml
<CustomField>
    <fullName>FS_Product_Billing_Setup__c</fullName>
    <label>Product Billing Setup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency Bill Letter - ABL</fullName>
            </value>
            <value>
                <fullName>Local Market / Bottler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>