force-app/main/default/objects/FS_CIF__c/fields/FS_Product_Comment__c.field-meta.xml
<CustomField>
    <fullName>FS_Product_Comment__c</fullName>
    <label>Product Information Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>