force-app/main/default/objects/FS_CIF__c/fields/FS_Program_Fee_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>FS_Program_Fee_Payment_Method__c</fullName>
    <description>Program Fee Payment Method</description>
    <inlineHelpText>&quot;&quot;Payment Term&quot; Invoicing requires Finance Approval from S. Curtis Marshall 
Warning: When Payment Term eligibility is changed from &quot;Yes&quot; to &quot;No&quot;, existing &quot;Payment Term&quot; methods will need to be updated.&quot;</inlineHelpText>
    <label>Program Fee Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FS_Payment_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Bank Draft</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Invoice (Payment Terms)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>