force-app/main/default/objects/FS_CIF__c/fields/FS_Reason_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>FS_Reason_if_applicable__c</fullName>
    <description>Site Survey Results</description>
    <label>Reason (if applicable)</label>
    <type>TextArea</type>
</CustomField>