force-app/main/default/objects/FS_CIF__c/fields/FS_Replacement_1__c.field-meta.xml
<CustomField>
    <fullName>FS_Replacement_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replacement 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FS_Installation__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Replacement</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>FS_Installation__c</referenceTo>
    <relationshipLabel>CIF (Replacement 1)</relationshipLabel>
    <relationshipName>Replacement1</relationshipName>
    <type>Lookup</type>
</CustomField>