force-app/main/default/objects/FS_CIF__c/fields/FS_Request_submitted_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>FS_Request_submitted_Date_Time__c</fullName>
    <description>This field is used to capture the date/time at which the user submitted the request for site assessment.</description>
    <label>Site assessment request submit Date/Time</label>
    <type>DateTime</type>
</CustomField>