force-app/main/default/objects/FS_CIF__c/fields/FS_Requested_Channel__c.field-meta.xml
<CustomField>
    <fullName>FS_Requested_Channel__c</fullName>
    <label>Requested Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QSR - Quick Serve Restaurant</fullName>
            </value>
            <value>
                <fullName>FSR - Full Serve Restaurant</fullName>
            </value>
            <value>
                <fullName>Fast Casual Restaurant</fullName>
            </value>
            <value>
                <fullName>Supermarket</fullName>
            </value>
            <value>
                <fullName>CR - Convenience Retail</fullName>
            </value>
            <value>
                <fullName>College/University</fullName>
            </value>
            <value>
                <fullName>Health/Hospital</fullName>
            </value>
            <value>
                <fullName>Workplace</fullName>
            </value>
            <value>
                <fullName>Amusement/Rec/Leisure</fullName>
            </value>
            <value>
                <fullName>Cinema/Movie</fullName>
            </value>
            <value>
                <fullName>Lodging</fullName>
            </value>
            <value>
                <fullName>Military</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>