force-app/main/default/objects/FS_CIF__c/fields/FS_Requested_Install_Period__c.field-meta.xml
<CustomField>
    <fullName>FS_Requested_Install_Period__c</fullName>
    <label>Specific Date OR Week Of</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Specific Date</fullName>
            </value>
            <value>
                <fullName>Week ofÃ¢â‚¬Â¦</fullName>
            </value>
            <value>
                <fullName>ASAP - no rush fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>