force-app/main/default/objects/FS_CIF__c/fields/FS_RO4W1__c.field-meta.xml
<CustomField>
    <fullName>FS_RO4W1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RO4W 1</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>FS_Installation__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Relocation (O4W)</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>FS_Installation__c</referenceTo>
    <relationshipLabel>RO4W1</relationshipLabel>
    <relationshipName>RO4W1</relationshipName>
    <type>Lookup</type>
</CustomField>