force-app/main/default/objects/FS_CIF__c/fields/FS_SA_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_SA_Completed_Date__c</fullName>
    <label>Date Site Assessment Completed</label>
    <type>Date</type>
</CustomField>