force-app/main/default/objects/FS_CIF__c/fields/FS_SA_Rescheduled_On_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_SA_Rescheduled_On_Date__c</fullName>
    <label>SA Rescheduled On Date</label>
    <type>Date</type>
</CustomField>