force-app/main/default/objects/FS_CIF__c/fields/FS_SA_Scheduled_Contacted_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_SA_Scheduled_Contacted_Date__c</fullName>
    <label>SA-Scheduled-Contacted Date</label>
    <type>Date</type>
</CustomField>