force-app/main/default/objects/FS_CIF__c/fields/FS_SA_Unable_to_Complete_Reason__c.field-meta.xml
<CustomField>
    <fullName>FS_SA_Unable_to_Complete_Reason__c</fullName>
    <label>SA-Unable to Complete Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>