force-app/main/default/objects/FS_CIF__c/fields/FS_Second_Davaco_Order_Entered__c.field-meta.xml
<CustomField>
    <fullName>FS_Second_Davaco_Order_Entered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Entered Second Survey</label>
    <type>Checkbox</type>
</CustomField>