force-app/main/default/objects/FS_CIF__c/fields/FS_Second_Davaco_Order_Entered_By__c.field-meta.xml
<CustomField>
    <fullName>FS_Second_Davaco_Order_Entered_By__c</fullName>
    <label>Order Entered By Second Survey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>