force-app/main/default/objects/FS_CIF__c/fields/FS_Second_GFE_Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Second_GFE_Posted_Date__c</fullName>
    <label>Date Second GFE Posted</label>
    <type>Date</type>
</CustomField>