force-app/main/default/objects/FS_CIF__c/fields/FS_Second_JDE_Doc__c.field-meta.xml
<CustomField>
    <fullName>FS_Second_JDE_Doc__c</fullName>
    <label>JDE Doc# Second survey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>