force-app/main/default/objects/FS_CIF__c/fields/FS_Second_SA_Incomplete_reason__c.field-meta.xml
<CustomField>
    <fullName>FS_Second_SA_Incomplete_reason__c</fullName>
    <label>Second SA Unable to Complete Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>