force-app/main/default/objects/FS_CIF__c/fields/FS_Second_SA_Rescheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Second_SA_Rescheduled_Date__c</fullName>
    <label>Second SA Rescheduled On Date</label>
    <type>Date</type>
</CustomField>