force-app/main/default/objects/FS_CIF__c/fields/FS_Second_SA_Rescheduled_Reason__c.field-meta.xml
<CustomField>
    <fullName>FS_Second_SA_Rescheduled_Reason__c</fullName>
    <label>Second SA Rescheduled Reason</label>
    <type>TextArea</type>
</CustomField>