force-app/main/default/objects/FS_CIF__c/fields/FS_Second_SA_Scheduled_By__c.field-meta.xml
<CustomField>
    <fullName>FS_Second_SA_Scheduled_By__c</fullName>
    <label>Second SA Scheduled By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>