force-app/main/default/objects/FS_CIF__c/fields/FS_Second_SA_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Second_SA_Scheduled_Date__c</fullName>
    <description>Second SA Scheduled On Date</description>
    <label>Second SA Scheduled On Date</label>
    <type>Date</type>
</CustomField>