force-app/main/default/objects/FS_CIF__c/fields/FS_Second_Site_Assessment_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Second_Site_Assessment_Completed_Date__c</fullName>
    <label>Date Second Site Assessment Completed</label>
    <type>Date</type>
</CustomField>