force-app/main/default/objects/FS_CIF__c/fields/FS_Second_Site_Prep_Contract_Received__c.field-meta.xml
<CustomField>
    <fullName>FS_Second_Site_Prep_Contract_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Second Site Prep Contract Received</description>
    <label>Second Site Prep Contract Received</label>
    <type>Checkbox</type>
</CustomField>