force-app/main/default/objects/FS_CIF__c/fields/FS_Second_Site_Survey_Reason__c.field-meta.xml
<CustomField>
    <fullName>FS_Second_Site_Survey_Reason__c</fullName>
    <description>Second Site Survey Reason</description>
    <label>Second Site Survey Reason(if Applicable)</label>
    <type>TextArea</type>
</CustomField>