force-app/main/default/objects/FS_CIF__c/fields/FS_Second_Work_Order_WO__c.field-meta.xml
<CustomField>
    <fullName>FS_Second_Work_Order_WO__c</fullName>
    <label>Work Order(WO)# Second survey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>