force-app/main/default/objects/FS_CIF__c/fields/FS_SecondSiteAssessment_req_submitted_DT__c.field-meta.xml
<CustomField>
    <fullName>FS_SecondSiteAssessment_req_submitted_DT__c</fullName>
    <label>Second Site assessment req submitted DT</label>
    <type>DateTime</type>
</CustomField>