force-app/main/default/objects/FS_CIF__c/fields/FS_SecondSiteassessmentrqst_submitted_by__c.field-meta.xml
<CustomField>
    <fullName>FS_SecondSiteassessmentrqst_submitted_by__c</fullName>
    <label>Second Site assessment req submitted by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>