force-app/main/default/objects/FS_CIF__c/fields/FS_Self_Serve_Top_Mount_Ice_maker_MFG__c.field-meta.xml
<CustomField>
    <fullName>FS_Self_Serve_Top_Mount_Ice_maker_MFG__c</fullName>
    <label>Top Mounted Ice Maker MANUFACTURER</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cornelius</fullName>
            </value>
            <value>
                <fullName>Follett</fullName>
            </value>
            <value>
                <fullName>Hoshizaki</fullName>
            </value>
            <value>
                <fullName>Ice-O-Matic</fullName>
            </value>
            <value>
                <fullName>Manitowoc</fullName>
            </value>
            <value>
                <fullName>Manual Fill</fullName>
            </value>
            <value>
                <fullName>Scotsman</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>