force-app/main/default/objects/FS_CIF__c/fields/FS_Self_Srv_Top_Mnt_Ice_maker_Mdl_no__c.field-meta.xml
<CustomField>
    <fullName>FS_Self_Srv_Top_Mnt_Ice_maker_Mdl_no__c</fullName>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>