force-app/main/default/objects/FS_CIF__c/fields/FS_Site_assessment_request_submitted__c.field-meta.xml
<CustomField>
    <fullName>FS_Site_assessment_request_submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used as an indicator to Davaco to retrieve the site assessment data for the particular outlet.</description>
    <label>Site assessment request submitted</label>
    <type>Checkbox</type>
</CustomField>