force-app/main/default/objects/FS_CIF__c/fields/FS_Site_assessment_request_submitted_by__c.field-meta.xml
<CustomField>
    <fullName>FS_Site_assessment_request_submitted_by__c</fullName>
    <description>This field is used to capture the name of the user submitting the request for site assessment.</description>
    <label>Site assessment request submitted by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>