force-app/main/default/objects/FS_CIF__c/fields/FS_Site_Assessor__c.field-meta.xml
<CustomField>
    <fullName>FS_Site_Assessor__c</fullName>
    <label>Site Assessor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Davaco</fullName>
            </value>
            <value>
                <fullName>7100 SA</fullName>
            </value>
            <value>
                <fullName>Facility Solutions</fullName>
            </value>
            <value>
                <fullName>Service Provider</fullName>
            </value>
            <value>
                <fullName>TBD1</fullName>
                <isActive>false</isActive>
                <label>TBD1</label>
            </value>
            <value>
                <fullName>TBD2</fullName>
                <isActive>false</isActive>
                <label>TBD2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>