force-app/main/default/objects/FS_CIF__c/fields/FS_Site_Survey_Notes__c.field-meta.xml
<CustomField>
    <fullName>FS_Site_Survey_Notes__c</fullName>
    <description>Used to capture the notes related to the site survey</description>
    <inlineHelpText>The Sales or COM users should use this field to give notes related to the site survey</inlineHelpText>
    <label>Site Survey Notes</label>
    <type>TextArea</type>
</CustomField>