force-app/main/default/objects/FS_CIF__c/fields/FS_Size_1__c.field-meta.xml
<CustomField>
    <fullName>FS_Size_1__c</fullName>
    <label>Size 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>