force-app/main/default/objects/FS_CIF__c/fields/FS_Sweetener_Provider__c.field-meta.xml
<CustomField>
    <fullName>FS_Sweetener_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sweetener Provider</description>
    <label>Sweetener Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CIF (Sweetener Provider)</relationshipLabel>
    <relationshipName>CIF3</relationshipName>
    <type>Lookup</type>
</CustomField>