force-app/main/default/objects/FS_CIF__c/fields/FS_Top_Off_Feature__c.field-meta.xml
<CustomField>
    <fullName>FS_Top_Off_Feature__c</fullName>
    <label>Top-Off Feature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>