force-app/main/default/objects/FS_CIF__c/fields/FS_Total_Dispensers__c.field-meta.xml
<CustomField>
    <fullName>FS_Total_Dispensers__c</fullName>
    <formula>if( ISBLANK(FS_Platform1_Qty__c),0,FS_Platform1_Qty__c)+
if( ISBLANK(FS_Platform2_Qty__c),0,FS_Platform2_Qty__c)+
if( ISBLANK(FS_Platform3_Qty__c),0,FS_Platform3_Qty__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Dispensers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>