force-app/main/default/objects/FS_CIF__c/fields/FS_Total_VPO__c.field-meta.xml
<CustomField>
    <fullName>FS_Total_VPO__c</fullName>
    <label>Estimated Annual Volume(gallons):</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>