force-app/main/default/objects/FS_CIF__c/fields/FS_Training_Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>FS_Training_Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Customer Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.FS_Headquarters__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CIF</relationshipLabel>
    <relationshipName>CIF</relationshipName>
    <type>Lookup</type>
</CustomField>