force-app/main/default/objects/FS_CIF__c/fields/FS_ValidFill_Option__c.field-meta.xml
<CustomField>
    <fullName>FS_ValidFill_Option__c</fullName>
    <label>ValidFill Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>